<resources>
    <string name="app_name">CodeChallenge</string>

    <!--    Error Strings-->
    <string name="ERR_NO_INTERNET_CONNECTION">Unable to connect to server. Please check your internet connection.</string>
    <string name="ERR_CANT_STORE_DATA">Unable to store data in the device.</string>

    <!--    Button Strings-->
    <string name="BUTTON_TRY_AGAIN">Try again</string>

    <!--    Image Description-->
    <string name="track_preview">Track Description</string>
    <string name="hd_tag">HD Tag</string>

    <string name="loading">Loading…</string>
    <string name="bullet">&#8226;</string>
    <string name="trailer">Trailer</string>
    <string name="placeholder">Default Placeholder</string>
    <string name="no_items">No Items</string>

<!--    Activity Titles-->
    <string name="title_activity_item">Item Name</string>
</resources>
